// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message from me 1`] = `
<div
  className="sc-bwzfXH iZXMpX"
>
  <div
    className="sc-htpNat fPLdOd"
  >
    <div
      className="sc-bxivhb bJuYab"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with avatar 1`] = `
<div
  className="sc-bwzfXH jAskBZ"
>
  <img
    className="sc-bdVaJa bPnyOK"
    src="image.png"
  />
  <div
    className="sc-htpNat iSvghE"
  >
    <div
      className="sc-bxivhb bvgTps"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with avatar from me 1`] = `
<div
  className="sc-bwzfXH hDcmlr"
>
  <img
    className="sc-bdVaJa bPnyOK"
    src="image.png"
  />
  <div
    className="sc-htpNat fKnvPy"
  >
    <div
      className="sc-bxivhb bJuYab"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with children 1`] = `
<div
  className="sc-bwzfXH kTdYcZ"
>
  <div
    className="sc-htpNat kayhEG"
  >
    <div
      className="sc-bxivhb bvgTps"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with label 1`] = `
<div
  className="sc-bwzfXH kTdYcZ"
>
  <div
    className="sc-htpNat kayhEG"
  >
    <div
      className="sc-bxivhb bvgTps"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    >
      some label
    </span>
  </div>
</div>
`;

exports[`message with not children 1`] = `
<div
  className="sc-bwzfXH kTdYcZ"
>
  <div
    className="sc-htpNat kayhEG"
  >
    <div
      className="sc-bxivhb bvgTps"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      />
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;
